[gd_scene load_steps=2 format=1]

[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel_main" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 210.0
margin/bottom = 410.0

[node name="button_solo" type="Button" parent="panel_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 10.0
margin/right = 105.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Single Player"
flat = false

[node name="button_multi" type="Button" parent="panel_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 60.0
margin/right = 94.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Multiplayer"
flat = false

[node name="button_tutorial" type="Button" parent="panel_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 110.0
margin/right = 70.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Tutorial"
flat = false

[node name="button_training" type="Button" parent="panel_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 160.0
margin/right = 72.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Training"
flat = false

[node name="button_options" type="Button" parent="panel_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 250.0
margin/right = 73.0
margin/bottom = 270.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="button_leave" type="Button" parent="panel_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 300.0
margin/right = 59.0
margin/bottom = 320.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Leave"
flat = false

[node name="panel_misc" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 810.0
margin/top = 10.0
margin/right = 1010.0
margin/bottom = 210.0

[node name="button_fork" type="Button" parent="panel_misc"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 124.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Duplicate Client"
flat = false

[connection signal="pressed" from="panel_main/button_solo" to="." method="_on_button_solo_pressed"]

[connection signal="pressed" from="panel_main/button_multi" to="." method="_on_button_multi_pressed"]

[connection signal="pressed" from="panel_main/button_tutorial" to="." method="_on_button_tutorial_pressed"]

[connection signal="pressed" from="panel_main/button_training" to="." method="_on_button_training_pressed"]

[connection signal="pressed" from="panel_main/button_options" to="." method="_on_button_options_pressed"]

[connection signal="pressed" from="panel_main/button_leave" to="." method="_on_button_leave_pressed"]

[connection signal="pressed" from="panel_misc/button_fork" to="." method="_on_button_fork_pressed"]


